<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/id_cName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/hint_cName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_hint_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_fName"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_fName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_cName" />

    <EditText
        android:id="@+id/id_lName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_lName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_fName" />

    <EditText
        android:id="@+id/id_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_tel"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_lName" />

    <EditText
        android:id="@+id/id_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tel" />

    <Button
        android:id="@+id/button_showContacts"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:background="@color/btnDefault"
        android:onClick="shwContacts"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/btn_shwContacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_mail" />

    <Button
        android:id="@+id/button_save2"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="44dp"
        android:background="@color/btnSave"
        android:backgroundTint="@color/btnSave_tint"
        android:onClick="btnSave"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/btn_saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_mail" />

</android.support.constraint.ConstraintLayout>