<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactList_detail">

    <EditText
        android:id="@+id/detail_cName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/hint_cName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_hint_cDetail"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/detail_fName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84sp"
        android:layout_marginTop="14sp"
        android:ems="10"
        android:hint="@string/hint_fName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_cName" />

    <EditText
        android:id="@+id/detail_lName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84sp"
        android:layout_marginTop="14sp"
        android:ems="10"
        android:hint="@string/hint_lName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_fName" />

    <EditText
        android:id="@+id/detail_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84sp"
        android:layout_marginTop="14sp"
        android:ems="10"
        android:hint="@string/hint_tel"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_lName" />

    <EditText
        android:id="@+id/detail_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="14sp"
        android:ems="10"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_tel" />

    <Button
        android:id="@+id/button_deleteContact"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="145sp"
        android:layout_height="47dp"
        android:layout_marginBottom="52dp"
        android:layout_marginStart="20dp"
        android:background="@color/btnDefault"
        android:onClick="btnDelete"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/btn_deleteContact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_updateInfo"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="145sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="20dp"
        android:background="@color/btnSave"
        android:backgroundTint="@color/btnSave_tint"
        android:onClick="btnUpdate"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/btn_updateInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>